fix: align page checkmarks

--- a/src/styles/views/Auth/view.module.sass
+++ b/src/styles/views/Auth/view.module.sass
@@ -76,6 +76,10 @@
       -webkit-background-clip: text
       -webkit-text-fill-color: transparent
 
+.Check
+    display: flex
+    align-items: center
+  
 .Check.Checked
   svg
     path:first-child
